# InstallTest

./: InstallCPM.ps1  README.md  downloadcpm.py  installcpm.ps1  installcpm.sh
src/CPM/: pyproject.toml
src/CPM/src/cpm/: __init__.py  __main__.py  cli.py  cpm.py
