[project]
name = "cpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose Meliton Sanchez Saldana", email = "josemelitons@microsoft.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer"
]

[project.scripts]
cpm = "cpm.cli:app"
crc = "cpm.cli:app"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
